# YOLO-SEG

./: .gitignore  README.md  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: ASSETS_BURAYA_README.txt
app/src/main/cpp/: CMakeLists.txt  YoloSeg.cpp  YoloSeg.h  fix_stringstream.cpp  glslang_stubs.cpp  ndkcamera.cpp  ndkcamera.h  yoloseg_jni.cpp
app/src/main/java/com/mavinci/yoloseg/: ModelManager.java  YoloSegJni.java
app/src/main/java/com/mavinci/yoloseg/ui/: CameraActivity.java  ImageActivity.java  MainActivity.java  SplashActivity.java  VideoActivity.java
app/src/main/java/com/mavinci/yoloseg/util/: ImageSaver.java
app/src/main/res/drawable/: bg_spinner.xml  ic_launcher_foreground.xml
app/src/main/res/layout/: activity_camera.xml  activity_image.xml  activity_main.xml  activity_splash.xml  activity_video.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
